5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_2908.log
== TEST (2019-03-22 18:33:02) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a * 2 + b * 2 + c * 2) / (a +b + c)
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:33:39) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a * 2 + b * 2 + c * 2) / (a + b + c)
print (x)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:34:59) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a * * 2 + b * * 2 + c * * 2) / (a + b + c)
print (round(x , 7))
-- ERROR:
File "XXXX", line 5
    x = (a * * 2 + b * * 2 + c * * 2) / (a + b + c)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 18:35:16) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print (round(x , 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 18:35:26) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print (round(x , 7))
-- EXECUTION TIME:
0.168632
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:40) 
-- CODE:
a = float(input(" Digite um numero: "))
b = float(input(" Digite um numero: "))
c = float(input(" Digite um numero: "))

x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print (round(x , 7))
-- EXECUTION TIME:
0.230554
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
